--- a/style.css
+++ b/style.css
@@ -202,4 +202,23 @@ a {
   .card-text {
     font-size: 13px;
   }
+
+   .btn {
+    width: 100%;
+    padding: 12px;
+    background: #25d366;
+    color: #fff;
+    border: none;
+    border-radius: 6px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.btn:disabled {
+    background: #bdbdbd;
+    cursor: not-allowed;
+    opacity: 0.8;
+}
+
 }
